# wxOpenCV

./: BoutonOperateur.odt  CMakeLists.txt  Doxyfile  License_OpenCV.txt  README.md  buildocv.sh  historique.txt  initzlibpng.sh  install.readme  installwxOpenCV.sh  libmodel.sh
CMake/: FindPLplot.cmake  FindwxWidgets.cmake
Doc/html/: _a_o_o___l_o_8cpp.html  _a_o_o___l_o_8h.html  _a_o_o___l_o_8h_source.html  _affichage_nouvelle_image_8cpp.html  _barre_etat_8cpp.html  _camera_andor_8cpp.html  _camera_andor_8h.html  _camera_andor_8h_source.html  _camera_open_c_v_8cpp.html  _camera_open_c_v_8h.html  _camera_open_c_v_8h_source.html  _camera_virtuelle_8h.html  _camera_virtuelle_8h_source.html  _connexion_d_d_e_8h.html  _connexion_d_d_e_8h_source.html  _controle_camera_8cpp.html  _controle_camera_8h.html  _controle_camera_8h_source.html  _document_8h_source.html  _document_texte_8h_source.html  _documentwin32_8h_source.html  _eve_8h_source.html  _evenement_camera_8h.html  _evenement_camera_8h_source.html  _fenetre_8h_source.html  _fenetre_algo_8cpp.html  _fenetre_algo_8h.html  _fenetre_algo_8h_source.html  _fenetre_coupe_8cpp.html  _fenetre_distribradiale_8cpp.html  _fenetre_focus_8cpp.html  _fenetre_histogramme_8cpp.html  _fenetre_palette_8cpp.html  _fenetre_principale_8h.html  _fenetre_principale_8h_source.html  _fenetre_principale_clavier_8cpp.html  _fenetre_region_8cpp.html  _fenetre_region_8h.html  _fenetre_region_8h_source.html  _fenetre_zoom_8cpp.html  (+238 more)
Doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_e.js  classes_f.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+82 more)
RapportAOO/: AOO_LO.cpp  AOO_LO.h  CMakeLists.txt
ScilabOpenCV/: CMakeLists.txt  dllHeader.h  main.cpp
wxOpenCVMain/: AffichageNouvelleImage.cpp  BarreEchelle.h  BarreEtat.cpp  CMakeLists.txt  CalcMoment.cpp  CameraAndor.cpp  CameraAndor.h  CameraOpenCV.cpp  CameraOpenCV.h  CameraVirtuelle.h  CaptureInfo3D.cpp  CaptureInfo3D.h  ConnexionDDE.h  ControleCamera.cpp  ControleCamera.h  DericheShen.cpp  EvenementCamera.h  Fenetre3D.cpp  Fenetre3D.h  FenetreAlgo.cpp  FenetreAlgo.h  FenetreCoupe.cpp  FenetreDistribradiale.cpp  FenetreFocus.cpp  FenetreGraphiqueWX.cpp  FenetreGraphiqueWX.h  FenetreHistogramme.cpp  FenetreInfo.cpp  FenetreInfo.h  FenetreInfoOperation.cpp  FenetreOperande.cpp  FenetreOperande.h  FenetrePalette.cpp  FenetrePano.cpp  FenetrePano.h  FenetrePrincipale.cpp  FenetrePrincipale.h  FenetrePrincipaleClavier.cpp  FenetreRegion.cpp  FenetreRegion.h  (+65 more)
wxOpenCVMain/bitmaps/: AKAZE.xpm  Agast.xpm  Avance.xpm  AvanceFin.xpm  BRISK.xpm  DNN.xpm  GMG.xpm  KAZE.xpm  KNN.xpm  LisGau.xpm  LisMed.xpm  LisMoy.xpm  MOG.xpm  MOG2.xpm  Match.xpm  ORB.xpm  Retour.xpm  RetourDebut.xpm  Sift.xpm  Surf.xpm  absdiff.xpm  addition.xpm  additionponderee.xpm  approxchain.xpm  approxpoly.xpm  backproject.xpm  blob.xpm  calcflotoptique.xpm  calcflotoptiquefarner.xpm  camera.xpm  camerafloat.xpm  canny.xpm  chapeaubas.xpm  chaphautblanc.xpm  chaphautnoir.xpm  clahe.xpm  cmpconnexe.xpm  contour.xpm  converttype.xpm  convexdefaut.xpm  (+80 more)
wxOpenCVMain/fr/: main.mo  main.po  messages - Copie - Copie.po  messages.mo  messages.po  wxIUA.po
wxOpenCVMain/fr/Nouveau dossier/: main.po  wxIUA - Copie.po  wxIUA.mo
