cmake_minimum_required(VERSION 2.8)

PROJECT (wxOpenCVMain)

set (wxOpenCV_VERSION_MAJOR 0)
set (wxOpenCV_VERSION_MINOR 0)

file(GLOB wxOpenCVMain_SRCS
    "*.h"
    "*.cpp"
    toolbar.rc)
ADD_EXECUTABLE (wxOpenCVMain ${wxOpenCVMain_SRCS})

configure_file (
	"${PROJECT_SOURCE_DIR}/wxOpenCVConfig.h.in"
	"${PROJECT_SOURCE_DIR}/wxOpenCVConfig.h"
	)

if (wxWidgets_FOUND)
	include_directories(${wxWidgets_INCLUDE_DIRS})
	target_link_libraries (wxOpenCVMain ${wxWidgets_LIBRARIES} )
endif (wxWidgets_FOUND)
if (OPENSCENEGRAPH_FOUND)
	include_directories(${OPENSCENEGRAPH_INCLUDE_DIRS})
	target_link_libraries (wxOpenCVMain ${OPENSCENEGRAPH_LIBRARIES} )

endif (OPENSCENEGRAPH_FOUND)
message("OPENCV = ${OpenCV_INCLUDE_DIRS}")
if (OpenCV_FOUND)
	include_directories( ${OpenCV_INCLUDE_DIRS} )
#	include_directories("${OPENCV_CONFIG_PATH}/include")
	target_link_libraries( wxOpenCVMain ${OpenCV_LIBS} )
else (OpenCV_FOUND)
message("PB->OPENCV = ${OpenCV_INCLUDE_DIRS}")
	include_directories( ${OpenCV_INCLUDE_DIRS} )
#	include_directories("${OPENCV_CONFIG_PATH}/include")
	target_link_libraries( wxOpenCVMain ${OpenCV_LIBS} )
endif (OpenCV_FOUND)
if (PLplot_FOUND)
	include_directories(${PLplot_INCLUDE_DIR})
endif (PLplot_FOUND)

IF(WIN32) # Check if we are on Windows
	message( STATUS         "WINDOWS")
	if(MSVC) # Check if we are using the Visual Studio compiler
		set_target_properties(wxOpenCVMain PROPERTIES  COMPILE_DEFINITIONS "")
		message( STATUS         "${WX_LIB_DIR}")
		IF(WX_LIB_DIR MATCHES ".*[dD][lL][lL].*")
				SET(wxWidgets_DEFINITIONS WXUSINGDLL)
				DBG_MSG_V("detected SHARED/DLL tree WX_LIB_DIR=${WX_LIB_DIR}")
		ENDIF(WX_LIB_DIR MATCHES ".*[dD][lL][lL].*")

		if  (CMAKE_CL_64)
			set_target_properties(wxOpenCVMain PROPERTIES  COMPILE_DEFINITIONS "OSG_LIBRARY_STATIC;${wxWidgets_DEFINITIONS};__WXMSW__;_CRT_SECURE_NO_WARNINGS")
		else()
			set_target_properties(wxOpenCVMain PROPERTIES  COMPILE_DEFINITIONS "OSG_LIBRARY_STATIC;${wxWidgets_DEFINITIONS};__WXMSW__;_CRT_SECURE_NO_WARNINGS")
		endif()
		set_target_properties(wxOpenCVMain PROPERTIES LINK_FLAGS_DEBUG  "/FORCE:MULTIPLE /SUBSYSTEM:WINDOWS")
		set_target_properties(wxOpenCVMain PROPERTIES LINK_FLAGS_RELEASE  "/SUBSYSTEM:WINDOWS /FORCE:MULTIPLE")		
		if (BUILD_SHARED_LIBS)
			target_link_libraries(wxOpenCVMain  optimized ${PLplot_LIBRARY_RELEASE})	
			target_link_libraries(wxOpenCVMain  optimized ${PLplot_CXX_LIBRARY_RELEASE})	
			target_link_libraries(wxOpenCVMain  optimized ${PLplot_WXWIDGETS_LIBRARY_RELEASE})	
			target_link_libraries(wxOpenCVMain  optimized ${PLplot_qsastime_LIBRARY_RELEASE})	
			target_link_libraries(wxOpenCVMain  optimized ${PLplot_csirocsa_LIBRARY_RELEASE})	
			target_link_libraries(wxOpenCVMain  debug ${PLplot_LIBRARY_DEBUG})	
			target_link_libraries(wxOpenCVMain  debug ${PLplot_CXX_LIBRARY_DEBUG})	
			target_link_libraries(wxOpenCVMain  debug ${PLplot_WXWIDGETS_LIBRARY_DEBUG})	
			target_link_libraries(wxOpenCVMain  debug ${PLplot_qsastime_LIBRARY_DEBUG})	
			target_link_libraries(wxOpenCVMain  debug ${PLplot_csirocsa_LIBRARY_DEBUG})	
		else()
			target_link_libraries(wxOpenCVMain  optimized ${PLplot_LIBRARY_RELEASE})	
			target_link_libraries(wxOpenCVMain  optimized ${PLplot_CXX_LIBRARY_RELEASE})	
			target_link_libraries(wxOpenCVMain  optimized ${PLplot_WXWIDGETS_LIBRARY_RELEASE})	
			target_link_libraries(wxOpenCVMain  optimized ${PLplot_qsastime_LIBRARY_RELEASE})	
			target_link_libraries(wxOpenCVMain  optimized ${PLplot_csirocsa_LIBRARY_RELEASE})	
			target_link_libraries(wxOpenCVMain  debug ${PLplot_LIBRARY_DEBUG})	
			target_link_libraries(wxOpenCVMain  debug ${PLplot_CXX_LIBRARY_DEBUG})	
			target_link_libraries(wxOpenCVMain  debug ${PLplot_WXWIDGETS_LIBRARY_DEBUG})	
			target_link_libraries(wxOpenCVMain  debug ${PLplot_qsastime_LIBRARY_DEBUG})	
			target_link_libraries(wxOpenCVMain  debug ${PLplot_csirocsa_LIBRARY_DEBUG})	
		endif()
	else()
		if (NOT CMAKE_COMPILER_IS_GNUCXX)
			message (SEND_ERROR  "You are using an unsupported Windows compiler! (Not MSVC or GCC)")
		endif()
	endif()
else()
	if(UNIX)
		set_target_properties(wxOpenCVMain PROPERTIES  COMPILE_DEFINITIONS "-std=c++0x")
		set_target_properties(wxOpenCVMain PROPERTIES  COMPILE_DEFINITIONS "__WXGTK__")
		target_link_libraries(wxOpenCVMain  release ${PLplot_LIBRARY} ${PLplot_CXX_LIBRARY} ${PLplot_wxwidgets_LIBRARY})	
	else()
		message ("You are on an unsupported platform! (Not Win32 or Unix)")
	endif()
endif()
